[package]
name = "mitm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
hudsucker = { version = "0.20", features = [] }
libui = "0.3"
rcgen = "0.11"
runas = "1"
rustls-pemfile = "1"
sysproxy = "0.3"
tokio = { version = "1", features = ["full"] }
vc-ltl = "5"

[build-dependencies]
embed-manifest = "1"
