[package]
name = "mitm"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
ctrlc = "3.4"
hudsucker = "0.23"
libui = "0.3"
rcgen = "0.13"
runas = "1"
rustls-pemfile = "2"
sysproxy = "0.3"
tokio = { version = "1", features = ["full"] }
vc-ltl = "5"

[build-dependencies]
embed-manifest = "1"
